--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "me-lembra-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "dev": "npx ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,26 @@
   "bugs": {
     "url": "https://github.com/PauloGabrieel/me-lembra-back/issues"
   },
-  "homepage": "https://github.com/PauloGabrieel/me-lembra-back#readme"
+  "homepage": "https://github.com/PauloGabrieel/me-lembra-back#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http-status": "^1.6.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "prisma": "^4.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "eslint": "^8.32.0",
+    "eslint-config-standard-with-typescript": "^31.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  }
 }
