--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "me-lembra-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
-    "dev": "npx nodemon src/index.ts",
-    "test": "npm run test:load-envs jest --forceExit",
+    "dev": "npx nodemon src/server.ts",
+    "test": "NODE_ENV=test jest --passWithNoTests --runInBand",
     "test:load-envs": "dotenv -e .env.test",
     "test:migration:generate": "npx dotenv -e .env.test npx prisma migrate dev --name pagou postgres-init"
   },
@@ -32,6 +32,7 @@
     "prisma": "^4.9.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
