--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,20 @@
 {
     "env": {
-        "es2021": true,
-        "node": true
+        "es2020": true,
+        "node": true,
+        "jest": true
     },
-    "extends": "standard-with-typescript",
-    "overrides": [
+    "extends": [
+        "standard"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": 11,
         "sourceType": "module"
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
     }
 }
