--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/src/server.js",
     "dev": "npx nodemon src/server.ts",
     "test": "npm run test:load-envs jest --passWithNoTests --runInBand",
     "test:load-envs": "dotenv -e .env.test",
